<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context="com.example.owner.shoppinglist.AddItem">

    <EditText
        android:id="@+id/etAddName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_name"/>

    <Spinner
        android:id="@+id/spAddCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <EditText
        android:id="@+id/etAddPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/price"/>

    <EditText
        android:id="@+id/etAddDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_description"/>

    <CheckBox
        android:id="@+id/cbAddPurchased"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchased"/>

    <Button
        android:id="@+id/btnAddItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_item"/>


</LinearLayout>
